# dindin-spike

./: Cargo.toml  Dockerfile  Rocket.toml  docker-compose.yml
migrations/2020-01-18-203429_create_users/: up.sql
migrations/2020-01-19-151629_create_authentication_pins/: down.sql  up.sql
migrations/2020-01-19-152348_create_authentication_pins_attempts/: down.sql  up.sql
scripts/: start
src/: auth.rs  authenticate.rs  db.rs  lib.rs  login.rs  main.rs  models.rs  notifications.rs  schema.rs  server.rs
tests/: authenticate.rs
