[package]
name = "dindin-spike"
version = "0.1.0"
authors = ["Luiz Parreira <luizfilipester@gmail.com.br>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.2"
diesel = { version = "1.0.0", features = ["postgres"] }
dotenv = "0.9.0"

[dependencies.rocket_contrib]
version = "0.4.2"
default-features = false
features = ["json",  "diesel_postgres_pool"]

[dependencies.serde]
version = "1.0.104"
features = ["derive"]
